--- a/src/index.html
+++ b/src/index.html
@@ -13,3 +13,23 @@
 </body>
 
 </html>
+<!-- <!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Hello World</title>
+</head>
+
+<body>
+    <script type="text/javascript">
+        let type = "WebGL"
+        if (!PIXI.utils.isWebGLSupported()) {
+            type = "canvas"
+        }
+
+        PIXI.utils.sayHello(type)
+    </script>
+</body>
+
+</html> -->
